--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-usage: ansi [-h] [--alpha ALPHA] [--ansi [COLOR [COLOR ...]]] [--colors]
-            [-p {greyscale,bw,256,16}] [--width WIDTH]
-            [file [file ...]]
+usage: ansi.py [-h] [--alpha ALPHA] [--ansi [COLOR [COLOR ...]]] [--colors]
+               [-p {16,256,bw,greyscale}] [--width WIDTH]
+               [file [file ...]]
 
 Images in B/W, Greyscale, 16 and 256 ANSI colors, delivered to STDOUT
 
@@ -13,6 +13,6 @@ optional arguments:
   --ansi [COLOR [COLOR ...]]
                         info for ANSI color (0-255)
   --colors              color cubes
-  -p {greyscale,bw,256,16}, --pallete {greyscale,bw,256,16}
+  -p {16,256,bw,greyscale}, --pallete {16,256,bw,greyscale}
                         pallete(s) to use
   --width WIDTH         default is terminal width (80)
