demo, Makefile, docs

--- a/README
+++ b/README
@@ -2,7 +2,8 @@ usage: ansi.py [-h] [--alpha ALPHA] [--ansi [COLOR [COLOR ...]]] [--colors]
                [-p {16,256,bw,greyscale}] [--width WIDTH]
                [file [file ...]]
 
-Images in B/W, Greyscale, 16 and 256 ANSI colors, delivered to STDOUT
+Images in B/W, Greyscale, 16 and 256 ANSI colors, delivered to STDOUT. Demo:
+`curl https://raw.githubusercontent.com/rupa/ansiimg/master/demo.ansi`
 
 positional arguments:
   file                  image files
